2016-10-01	"May the forces of evil become confused on the way to your
		 house."  (2)

		include/innocent-pear/omg.h :
		- now tries to use `ldr pc, ...' instruction when compiling
		  for ARM-32 in ARM or Thumb-32 mode

		test/test-orly-1.cc ,
		test/test-orly-1.good ,
		test/test-orly-2.cc ,
		test/test-orly-2.good :
		- split test case test-orly into two test cases, test-orly-1
		  and test-orly-2

		test/test-doge-eh.cc ,
		test/test-doge-eh.sub.cc :
		- split test-doge-eh test case into two modules (but still
		  one test case)

		GNUmakefile :
		- updated per test case changes

2016-09-30	"May the forces of evil become confused on the way to your
		 house."

		include/innocent-pear/omg.h :
		- now adds more random instruction prefixes when compiling
		  for x86-32 or x86-64
		- now tries to use `iretl' instruction, when compiling using
		  g++ for x86-32

2016-09-29	Link in `-latomic'.  (2)

		GNUmakefile :
		- now propagates results of target-side `-latomic' test to
		  compilation of host-side tools

		bin/innocent-pear-c++.cc :
		- ugly hack: now inserts `-latomic' option right before the
		  final doge_i[] module, if applicable -- since the
		  unscrambler may call `-latomic' routines (for i386), we
		  want to place the used routines outside the scrambled part
		  of .text

2016-09-28	Link in `-latomic'.

		configure :
		- now probes for `-latomic' library for both host and target

		lolwutconf/ :
		- bumped to 0afa88f95d

2016-09-27	allow_all -> allow_for_startup, and a bit more.

		include/innocent-pear/bbq.h :
		- renamed innocent_pear::impl::allow_all -> innocent_pear::
		  impl::allow_for_startup, to better reflect its true
		  semantics
		- removed innocent_pear::impl::allow_terminal_unsafes

		include/innocent-pear/rofl.h :
		- in debug mode, rofl<...>::tcflow(, TCOOFF) for each seed
		  will stop logging after being called a few hundred times
		  (unless there is an `unsigned long' overflow...)

		include/innocent-pear/omg.h ,